# NotebookLM2PPT

./: .gitignore  BUILDING.md  LICENSE  README.md  TROUBLESHOOTING.md  build-helper.cmd  build-helper.ps1  build.cmd  combine.py  compile.md  compile.py  main.py  publish_docs.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.vitepress/: config.mts
docs/: changelog.md  compare.md  development-guide.md  features.md  implementation.md  index.md  mineru.md  quickstart.md  tutorial.md
notebooklm2ppt/: __init__.py  cli.py  config_defaults.py  gui.py  pdf2png.py
notebooklm2ppt/i18n/: __init__.py  en.py  vi.py  zh_cn.py
notebooklm2ppt/utils/: __init__.py  coordinate_utils.py  edge_diversity.py  image_inpainter.py  image_viewer.py  inpaint_methods.py  pp_ocr.py  ppt_combiner.py  ppt_creater.py  ppt_refiner.py  process_checker.py  screenshot_automation.py
src/: __init__.py
tests/: compare_result.py  test_image_view.py
